# preshell

./: .travis.yml  CMakeLists.txt  README.md  build.sh
app/: CMakeLists.txt  console.cpp  console.hpp  editline_shell.cpp  editline_shell.hpp  interrupt_handler_override.cpp  interrupt_handler_override.hpp  main.cpp  override_guard.hpp  readline_shell.cpp  readline_shell.hpp
cmake/Modules/: FindEditline.cmake  FindReadline.cmake
include/console/: attributes.hpp
include/just/: process.hpp
include/preshell/: config.hpp  context.hpp  file_position.hpp  if_state.hpp  indenter.hpp  macro_definition.hpp  macro_map.hpp  parse_config.hpp  preshell.hpp  preshell_preprocessing_hooks.hpp  result.hpp  shell.hpp  string.hpp  token.hpp  util.hpp  version.hpp  wave_context.hpp  wave_context_workaround.hpp
include/process/: exception.hpp  output.hpp  process.hpp  version.hpp
include/process/impl/: input_file.hpp  output_file.hpp  pipe.hpp
lib/: CMakeLists.txt  config.cpp  context.cpp  default_defines.hpp  default_include.hpp  default_sysinclude.hpp  indenter.cpp  indenter.hpp  macro_definition.cpp  macro_map.cpp  parse_config.cpp  preshell.cpp  preshell_preprocessing_hooks.cpp  shell.cpp  util.cpp  version.cpp  wave_context.cpp
lib/core/: CMakeLists.txt  macro_definition.cpp  util.cpp  version.cpp
test/: CMakeLists.txt  clang_compatibility.cpp  definition_logging.cpp  history.cpp  is_pragma_usage.cpp  join.cpp  main.cpp  parse_config.cpp  preshell.cpp  replay_history.cpp  shell.cpp  temp_header.cpp  temp_header.hpp  test_shell.cpp  test_shell.hpp  test_util.cpp  test_util.hpp
tools/: gcc_builtin_macros  gcc_default_path
